# Pocket-Chordsmith

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODEX.md  CONTRIBUTING.md  LICENSE  LICENSES.md  MIGRATION.md  POCKET_CHORDSMITH_CODEX_CONTEXT.md  PROJECT_MEMORY.md  README.md  SECURITY.md  demo.json  index.html  pocket_chordsmith_v59.html
.github/workflows/: ci.yml
addons/pocket_chordsmith/: CHANGELOG.md  MIGRATION.md  README.md  SKILL.md  plugin.cfg  plugin.gd  pocket_chordsmith_plugin.gd
apps/chordsmith-web/: POCKET_CHORDSMITH_CODEX_CONTEXT.md  README.md  index.html  (+5 more)
apps/pocket-daw/src-tauri/: Cargo.toml  tauri.conf.json
apps/pocket-daw/src-tauri/capabilities/: deep-link.json  desktop-updater.json
apps/pocket-daw/src-tauri/src/: generated_sound_recipes.rs  lib.rs  main.rs  native_audio.rs  native_decode.rs  native_recording.rs  project_files.rs  session_import.rs
docs/: ADAPTIVE_MUSIC_API.md  CROSS_APP_RELEASE_DASHBOARD.md  FUNK_SOUND_PACK_SPEC.md  GODOT_PARITY_EXPORT_WORKFLOW.md  LOCAL_ARTIFACTS_POLICY.md  LOFI_CHILL_PACK_IMPLEMENTATION.md  NEW_GAME_AUDIO_RUNTIME_GUIDE.md  POCKET_AUDIO_CORE_API_DRAFT.md  POCKET_AUDIO_CORE_APP_INTEGRATION_REPORT.md  POCKET_AUDIO_CORE_COMPLETION_REPORT.md  POCKET_AUDIO_CORE_EXTRACTION_PLAN.md  POCKET_AUDIO_CORE_INVENTORY.md  POCKET_AUDIO_CORE_LIVE_ENGINE_EXTRACTION_GATE.md  POCKET_AUDIO_CORE_MIDI_EXPORT_CHECKPOINT.md  POCKET_AUDIO_CORE_PARITY_REPORT.md  POCKET_AUDIO_SOUND_PARITY_MATRIX.md  POCKET_DAW_FOUNDATION_DESIGN.md  POCKET_RELEASE_MASTERING_STATUS.md  SOUND_PROFILE_EVOLUTION_ARCHITECTURE.md  public-roadmap.md
pocket_audio_core_handoff/: README.md  first_prompt_to_paste_into_codex.txt  manifest.md  pocket_audio_core_project_brief.md  versioning_and_release_policy.md
pocket_dj/: README.md  pocket_dj_v1_planning_doc.md  pocket_dj_v1e_help_polish.html
scripts/: build-samfa12-compilation-album-1.mjs  check-repo-organization.mjs  create-samfa12-compilation-daw-projects.mjs  pocket-audio-release.mjs  prepare-samfa12-compilation-delivery.mjs  verify-sound-profile-contract.mjs
web-app/: POCKET_CHORDSMITH_CODEX_CONTEXT.md  README.md  demo.json  index.html  playwright.config.js  pocket_chordsmith_v61_rock_guitar_fix.html  pocket_chordsmith_v64_western_sounds.html  pocket_chordsmith_v67_direct_godot_push.html
(+411 files in other folders)
