[package]
name = "pocket-daw"
version = "0.5.2"
description = "Pocket DAW desktop app"
authors = ["Pocket Family"]
edition = "2021"

[lib]
name = "pocket_daw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
rfd = "0.15"
