[package]
name = "pocket-daw"
version = "0.6.42"
description = "Pocket DAW desktop app"
authors = ["Pocket Family"]
edition = "2021"

[lib]
name = "pocket_daw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
rfd = "0.15"
rand = "0.9"
cfb = "0.7.3"
flate2 = "1.1.9"
quick-xml = "0.39.4"
sha2 = "0.10.9"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
symphonia = { version = "0.6.0", default-features = false, features = ["all-meta", "flac", "mp3", "ogg", "pcm", "vorbis", "wav", "aiff"] }

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
